assets/individual/css/individual.css
/* ... */
/* Make images easier to work with */

img,
picture {
    max-width: 100%;
    display: block;
}

/* Inherit fonts for inputs and buttons */

input,
button,
textarea,
select {
    font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */

@media (prefers-reduced-motion: reduce) {
    html:focus-within {
        scroll-behavior: auto;
    }

    *,
    *::before,
    *::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
        scroll-behavior: auto !important;
    }
}

/* *********** Custom style ************** */

:root {
    --Orange: hsl(26, 100%, 55%);
    --Pale-orange: hsl(25, 100%, 94%);
    --Very-dark-blue: hsl(218, 12%, 13%);
    --Dark-grayish-blue: hsl(219, 9%, 45%);
    --Grayish-blue: hsl(220, 14%, 75%);
    --Light-grayish-blue: hsl(223, 64%, 98%);
    --White: hsl(0, 0%, 100%);
    --Black: hsl(0, 0%, 0%);
    /* (with 75% opacity for lightbox background) */
}

ul {
    list-style-type: none;
}

a {
    color: inherit;
    text-decoration: none;
}

/* **************** NavBar *************** */



@font-face {
    font-family: "vanilla";
    src: url("../../fonts/VanillaTwilight\ Script.eot");
    src: url("../../fonts/Vanilla\ Twilight\ Script.eot?iefix") format("embedded-opentype"),
        url("../../fonts/Vanilla\ Twilight\ Script.woff") format("woff"),
        url("../../fonts/VanillaTwilight\ Script.ttf") format("truetype"),
        url("../../fonts/Vanilla\ Twilight\ Script.svg") format("svg");
    font-weight: normal;
    font-style: normal;
}

button {
    border: 0;
    padding: 0;
    background: transparent;
    cursor: pointer;
}

/* navnar */
.menu,
.background {
    position: fixed;
}

.navbar {
    position:fixed;
    z-index: 5;
    top: 0;
    left: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    height: 8vh;
    padding: 0 0 0 20px;
    background: #19191c;
    color: #f9f9f9;
}

.navbar #adopcion {
    font-family: 'vanilla';
    font-size: 2.5rem;
    transition: all .3s;
}

.navbar #adopcion:hover {
    -webkit-text-stroke: 1px #fff;
    color: transparent;
    scale: 1.1;
}

.navbar>button {
    font-size: 28px;
}

.navbar-logo {
    height: 3rem;
    filter: invert(100%);
}

.navbar-burger {
    z-index: 5;
    top: 0;
    right: 0;
    display: grid;
    place-items: center;
    color: white;
    font-size: 2rem;
    width: 72px;
    height: 72px;
    background-image: url("../../adoption/css/img/menu.svg");
    background-repeat: no-repeat;
    background-position: center;
}

body.open .navbar-burger {
    background-image: url("../../adoption/css/img/close.svg");
    z-index: 5;
}

.menu {
    z-index: 2;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 32px;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.8);
    opacity: 0;
    visibility: hidden;
    transition: 0.5s;
}

body.open .menu {
    opacity: 1;
    visibility: visible;
}

.menu>a {
    color: #f9f9f9;
    font-size: 32px;
    font-family: "Euclid Circular A";
    text-decoration: none;
}

body.open .menu>a {
    animation: appear 0.3s both;
}

@keyframes appear {
    0% {
        opacity: 0;
        translate: 0 50px;
    }

    100% {
        opacity: 1;
    }
}



/* Container that contain the others so that they have some space on the left and right side of them */

.container {
    width: min(90%, 1140px);
    margin: auto;
    padding: 1.5rem 0.5rem;
}

.container,
.nav-links,
.menu,
.logo-ctn,
.cart-ctn {
    display: flex;
    gap: 1.75rem;
    align-items: center;
}

/* Gray overlay to body when side navbar pops-up on the mobile size */

.show-overlay {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 100;
    transition: all 500ms;
    background: rgba(0, 0, 0, 0.7);
}

/* Navigation Box styling for the mobile size. */

.nav-links {
    position: absolute;
    top: 0;
    left: 0;
    width: 70%;
    height: 100%;
    padding: 1.75rem;
    background: var(--White);
    gap: 0.75rem;
    z-index: 200;
    flex-direction: column;
    align-items: flex-start;
    transform: translateX(-100%);
    transition: all 500ms ease-in-out;
}

/* Adding this class to navigation box, to come in the screen when navigation menu is clicked. */

.show-nav {
    transform: translateX(0%);
}

.nav-links li:first-child {
    margin-bottom: 2rem;
}

/* Navigation links */

.nav-link {
    font-weight: 600;
    font-size: 1.2rem;
    position: relative;
}

.nav-link::after {
    content: "";
    width: 100%;
    height: 5px;
    position: absolute;
    left: 0;
    bottom: -0.5rem;
    background: var(--Orange);
    transform: scaleX(0);
    transform-origin: left;
    transition: transform 300ms;
}

.nav-link:hover::after {
    transform: scaleX(1);
}

/* Shopping Cart icon */

.cart-ctn {
    margin-left: auto;
    position: relative;
    margin-right: 0.5rem;
}

.cart-icon:hover {
    cursor: pointer;
    color: var(--Very-dark-blue);
}

.cart-notify {
    font-size: 0.55rem;
    position: absolute;
    top: -5px;
    right: -5px;
    font-weight: bold;
    line-height: 1.4;
    padding: 0rem 0.4rem;
    color: var(--White);
    border-radius: 50px;
    background: var(--Orange);
    display: none;
}

.show-cart-notification {
    display: block;
}

/* Cart modal */

.cart-modal {
    width: 350px;
    height: 230px;
    top: 5.5rem;
    left: 50%;
    z-index: 10;
    transform: translateX(50%);
    opacity: 0;
    position: absolute;
    border-radius: 10px;
    background: var(--White);
    transition: all 500ms ease-in-out;
    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2),
        -10px 10px 30px rgba(0, 0, 0, 0.2);
}
/* ... */

